--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <![endif]-->
 
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <p>Hello world! This is HTML5 Boilerplatex.</p>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
     <script src="js/site.min.js"></script>
