Updates index and sass
Added test nav bar and changed bg color

--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
     <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
-
     <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplatex.</p>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Logo</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Use it</a></li>
+                <li><a href="#">Documentation</a></li>
+            </ul>
+        </div>
+    </nav>
+    <p>Hi memesters</p>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
     <script src="js/site.min.js"></script>
