Fjernet ubrukt eksempel, og la til material icon

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/site.min.css">
 </head>
@@ -39,13 +40,20 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo">Logo</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Use it</a></li>
-                <li><a href="#">Documentation</a></li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Use it</a>
+                </li>
+                <li>
+                    <a href="#">Documentation</a>
+                </li>
             </ul>
         </div>
     </nav>
     <p>Hi memesters</p>
+    <i class="material-icons">add</i>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
     <script src="js/site.min.js"></script>
