Basic level reader

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </div>
     </nav>
     <p>Hi memesters</p>
+    <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
+    <input type="submit" id="levelParseStart">
     <i class="material-icons">add</i>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
