--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
     <script src="js/site.min.js"></script>
-
+    <script src="js/partial/level_verifyer.js"></script>
 </body>
 
 </html>
