leser eksempel json filen, og renderer uten noe styling. Endret favicons

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
             </ul>
         </div>
     </nav>
+    <h1 id="title-bar"></h1>
     <p>Hi memesters</p>
+
+    <div id="level-container">
+
+    </div>
+
     <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
     <input type="submit" id="levelParseStart">
     <i class="material-icons">add</i>
