Oppdatert gruntfil, la til en basic render, og sass for buttons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -53,15 +54,26 @@
         </div>
     </nav>
     <h1 id="title-bar"></h1>
-    <p>Hi memesters</p>
 
-    <div id="level-container">
+    <div id="level-container" class="container">
+        <div class="row">
+            <div class="col s12 l6">
+                Klokka vår
+            </div>
+            <div class="col s12 l6">
+                <div class="button-list__container">
+
+                </div>
+            </div>
+        </div>
+
+
 
     </div>
 
-    <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
+    <!-- <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
     <input type="submit" id="levelParseStart">
-    <i class="material-icons">add</i>
+    <i class="material-icons">add</i> -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/materialize.min.js"></script>
     <script src="js/site.min.js"></script>
