La til snackbar og modal + basic styling

--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@
 
         </div>
     </div>
+    
+    <button id="snackbar" class="snackbar">Placeholder Stuff</button>
+
+    <div id="simpleModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+            <span class="modal-closeBtn">&times;</span>
+            <h2>Modal Header</h2>
+        </div>
+        <div class="modal-body">
+          <p>Hello...I am a modal</p>
+          <p>This is a placeholder... I'm blue dabe dia be dai</p>
+        </div>
+        <div class="modal-footer">
+          <h3>Modal Footer</h3>
+        </div>
+      </div>
+    </div>
 
     <!-- <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
     <input type="submit" id="levelParseStart">
