--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <div class="row main-stage__hero">
             <div class="col s12 l6 main-stage__left">
                 Klokka vår
+                <div class="clock__spinner--2"></div>
             </div>
             <div class="col s12 l6 main-stage__right">
                 <div class="button-list__container">
@@ -76,23 +77,23 @@
 
         </div>
     </div>
-    
+
     <button id="snackbar" class="snackbar">Placeholder Stuff</button>
 
     <div id="simpleModal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-            <span class="modal-closeBtn">&times;</span>
-            <h2>Modal Header</h2>
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-closeBtn">&times;</span>
+                <h2>Modal Header</h2>
+            </div>
+            <div class="modal-body">
+                <p>Hello...I am a modal</p>
+                <p>This is a placeholder... I'm blue dabe dia be dai</p>
+            </div>
+            <div class="modal-footer">
+                <h3>Modal Footer</h3>
+            </div>
         </div>
-        <div class="modal-body">
-          <p>Hello...I am a modal</p>
-          <p>This is a placeholder... I'm blue dabe dia be dai</p>
-        </div>
-        <div class="modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-      </div>
     </div>
 
     <!-- <textarea name="debug" id="levelDropZone" cols="30" rows="60" style="height:20rem"></textarea>
